--- a/todo.html
+++ b/todo.html
@@ -22,7 +22,7 @@
                     </ul>
                     <ul class="navbar-nav ml-auto">
                         
-                        <li class="navbar-brand"><a id="logOut" href="https://hashirakb.github.io/WeDo-ToDo-List-Application/" class="nav-link">&nbsp;LogOut</a></li>
+                        <li class="navbar-brand"><a id="logOut" href="https://akshay98kv.github.io/To-do/" class="nav-link">&nbsp;LogOut</a></li>
                     </ul>
                 </div>
 
