--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <form class="form form-active">
                       <div class="form--header-container">
                         <h1 class="form--header-title">
-                          WeDo ToDo List
+                            Do-It ToDo List
                         </h1>
 
                         <h2>
